# file-browser-api

./: .env  Justfile  Justscripts  README.md  docker-compose.yml  pyproject.toml
_docker/: Dockerfile  Dockerfile.dockerignore
file_browser_api/: settings.py
file_browser_api/browser/: _file_system.py  controller.py  error.py  router.py  schema.py
file_browser_api/service/: main.py
tests/unit/browser/: conftest.py  test_file_system.py
