[tool.poetry]
name = "file-browser-api"
version = "0.1.0"
description = ""
authors = ["Marek Czaplicki <mdczaplicki@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.7"
fastapi = "0.115.3"
aiofiles = "24.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.3"
pytest-asyncio = "0.24.0"
ruff = "0.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "tests",
]

[tool.ruff]
target-version = "py312"
line-length = 119

[tool.ruff.lint]
select = ["ALL"]  # be strict
ignore = [
    "D",
    "ISC001",
    "COM812",
    "RET504",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
